# YOUTUBEDROP

./: .env.example  .gitignore  Dockerfile  README-ResonanceEnergy.md  README.md  README.md.backup  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt  run_daily.py  setup.py
config/: settings.json
docs/: ARCHITECTURE.md  INTEGRATION_DESIGN.md
doctrine/: org_routes.yaml  relevance_profiles.yaml
openclaw/: __init__.py  __main__.py  agent.py  config.py  database.py  discord_bot.py  processor.py  telegram_bot.py  youtube_parser.py
ops/: scheduler.md  youtubedrop-openclaw.service
pipelines/: clip.py  ingest.py  publish.py  rank.py  segment.py  transcripts.py
reports/: delta_plan_2026-02-20-ResonanceEnergy.json  delta_plan_2026-02-20-ResonanceEnergy.md  delta_plan_2026-02-21-ResonanceEnergy.json  delta_plan_2026-02-21-ResonanceEnergy.md  delta_plan_2026-02-21.json  delta_plan_2026-02-21.md  delta_plan_2026-02-22.json  delta_plan_2026-02-22.md  delta_plan_2026-02-23.json  delta_plan_2026-02-23.md
schemas/: intel_packet.json
src/: __init__.py  ingestor-ResonanceEnergy.py  ingestor.py  main.py  script_generator.py  upload_manager.py
tests/: test_rank.py  test_segment.py  test_text.py  test_youtube_parser.py  test_youtubedrop.py
utils/: io.py  text.py  youtube_api.py
