[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtubedrop-openclaw"
version = "1.0.0"
description = "OpenClaw Agent — Send YouTube links from your phone via Telegram or Discord"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "YOUTUBEDROP", email = "droppa960@gmail.com"},
]
dependencies = [
    "python-telegram-bot[all]>=21.0",
    "discord.py>=2.3",
    "yt-dlp>=2024.0",
    "aiosqlite>=0.19",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "youtube-transcript-api>=0.6,<1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
    "PyYAML>=6.0",
    "requests>=2.28",
]

[project.scripts]
openclaw = "openclaw.agent:main"

[tool.setuptools.packages.find]
include = ["openclaw*", "utils*", "pipelines*"]
